RESOLVED FIXED261524
Regression(262976@main) Images do not show in Microsoft Word Online
https://bugs.webkit.org/show_bug.cgi?id=261524
Summary Regression(262976@main) Images do not show in Microsoft Word Online
Chris Dumez
Reported 2023-09-13 12:35:37 PDT
Images do not show in Microsoft Word Online since the data URL decoding change in 262976@main.
Attachments
Chris Dumez
Comment 1 2023-09-13 12:35:45 PDT
Chris Dumez
Comment 2 2023-09-13 12:41:56 PDT
EWS
Comment 3 2023-09-13 15:41:00 PDT
Committed 267969@main (599c092f0fc9): <https://commits.webkit.org/267969@main> Reviewed commits have been landed. Closing PR #17744 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.