Cherry-pick 599c092f0fc9. rdar://114573089

Cherry-pick 267969@main (599c092f0fc9). rdar://114573089

        Regression(262976@main) Images do not show in Microsoft Word Online
        https://bugs.webkit.org/show_bug.cgi?id=261524
        rdar://114573089

        Reviewed by Brent Fulgham.

        Images do not show in Microsoft Word Online since the data URL change in 262976@main.
        It is a surprising since 262976@main was meant to align us with other browsers and yet
        images show correctly in Chrome & Firefox.

        After some investigation, I found that the data URL used by Word Online for images in
        Safari have incorrect padding, while the ones it uses in Chrome have correct padding.
        As a result, it doesn't appear to be a WebKit bug but rather Safari getting served
        different content than Chrome for some reason.

        To address the issue, I am introducing a quirk to disable padding validation in data
        URLs on Microsoft Word Online.

        * Source/WTF/wtf/text/Base64.cpp:
        (WTF::base64DecodeInternal):
        * Source/WTF/wtf/text/Base64.h:
        * Source/WebCore/loader/ResourceLoader.cpp:
        (WebCore::ResourceLoader::loadDataURL):
        * Source/WebCore/page/Quirks.cpp:
        (WebCore::Quirks::shouldDisableDataURLPaddingValidation const):
        * Source/WebCore/page/Quirks.h:
        * Source/WebCore/platform/network/DataURLDecoder.cpp:
        (WebCore::DataURLDecoder::DecodeTask::DecodeTask):
        (WebCore::DataURLDecoder::createDecodeTask):
        (WebCore::DataURLDecoder::decodeSynchronously):
        (WebCore::DataURLDecoder::decode):
        * Source/WebCore/platform/network/DataURLDecoder.h:

        Canonical link: https://commits.webkit.org/267969@main

Canonical link: https://commits.webkit.org/265870.577@safari-7616-branch