Source/WebCore/page/Quirks.h
@@ -179,6 +179,8 @@ public:
 
     bool needsResettingTransitionCancelsRunningTransitionQuirk() const;
 
+    bool shouldDisableDataURLPaddingValidation() const;
+
 private:
     bool needsQuirks() const;
 
@@ -242,6 +244,7 @@ private:
 #endif
     bool m_needsConfigurableIndexedPropertiesQuirk { false };
     bool m_needsToCopyUserSelectNoneQuirk { false };
+    mutable std::optional<bool> m_shouldDisableDataURLPaddingValidation;
 };
 
 } // namespace WebCore
